; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_redis.c_get_error.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_redis.c_get_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8* }

@errno = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@h2o_redis_error_connect_timeout = common dso_local global i8* null, align 8
@h2o_redis_error_connection = common dso_local global i8* null, align 8
@h2o_redis_error_protocol = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [6 x i8] c"FIXME\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_3__*)* @get_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_error(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  switch i32 %6, label %24 [
    i32 128, label %7
    i32 132, label %8
    i32 133, label %16
    i32 129, label %18
    i32 131, label %20
    i32 130, label %20
  ]

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %26

8:                                                ; preds = %1
  %9 = load i32, i32* @errno, align 4
  %10 = load i32, i32* @ETIMEDOUT, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = load i8*, i8** @h2o_redis_error_connect_timeout, align 8
  store i8* %13, i8** %2, align 8
  br label %26

14:                                               ; preds = %8
  %15 = load i8*, i8** @h2o_redis_error_connection, align 8
  store i8* %15, i8** %2, align 8
  br label %26

16:                                               ; preds = %1
  %17 = load i8*, i8** @h2o_redis_error_connection, align 8
  store i8* %17, i8** %2, align 8
  br label %26

18:                                               ; preds = %1
  %19 = load i8*, i8** @h2o_redis_error_protocol, align 8
  store i8* %19, i8** %2, align 8
  br label %26

20:                                               ; preds = %1, %1
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load i8*, i8** %22, align 8
  store i8* %23, i8** %2, align 8
  br label %26

24:                                               ; preds = %1
  %25 = call i32 @h2o_fatal(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  br label %26

26:                                               ; preds = %7, %12, %14, %16, %18, %20, %24
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}

declare dso_local i32 @h2o_fatal(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
